--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -1,10 +1,4 @@
-# URL de acesso ao sistema
-config.url=
-# Usuário
-config.user1=
-# Senha
-config.pass1=
-
-
-# URLs das APIs 
-url.api.xxxxxx = https://....
+# URLs das APIs
+api.base.url = http://localhost
+api.base.port = 1234
+api.base.path = /api
